# df-announcements

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: GitVersion.cmake
proto/: Reports.proto
src/: AnnouncementTypeList.cpp  AnnouncementTypeList.h  Application.cpp  Application.h  ColorDelegate.cpp  ColorDelegate.h  ColorPaletteModel.cpp  ColorPaletteModel.h  DFTime.h  GameManager.cpp  GameManager.h  MainWindow.cpp  MainWindow.h  ReportFilterProxyModel.cpp  ReportFilterProxyModel.h  ReportModel.cpp  ReportModel.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  Version.h.in  main.cpp
ui/: AboutDialog.ui  MainWindow.ui  SettingsDialog.ui
